--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <header>
-
+<body class="inter-font">
+    <header class="header">
+        <div class="banner-content">
+            <h3 class="banner-subtitle">Happy New Year</h3>
+            <h1 class="banner-title">New Year Party</h1>
+            <h1 class="banner-title"> Celebration</h1>
+        </div>
     </header>
     <main>
 
